# app-plugin-boilerplate

./: .gitignore  .gitmodules  Makefile  PLUGIN_SPECIFICATION.md  README.md  ledger_app.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/workflows/: build-workflow.yml  build_and_functional_tests.yml  check_sdk.yml  ci-workflow.yml  lint-workflow.yml
fuzzing/: CMakeLists.txt  README.md  fuzz.c  fuzz_plugin.c  mocks.c
src/: boilerplate_plugin.c  boilerplate_plugin.h  contract.c  handle_finalize.c  handle_init_contract.c  handle_provide_parameter.c  handle_provide_token.c  handle_query_contract_id.c  handle_query_contract_ui.c  main.c  origin_defi_plugin.h  origin_plugin.h  plugin.c  plugin.h  pstake_plugin.h  utils.c  utils.h  xmacro_helpers.h
src/dbg/: debug.h  printf.c
src/debug_utils/: debug.c  debug.h  printf.c  printf.h
tests/: .babelrc  .eslintrc.js  .gitignore  README.md  build_local_test_elfs.sh  conftest.py  globalsetup.js  jest.config.js  jest.js  package.json  requirements.txt  setupTests.js  test.fixture.js  test_appname_cmd.py  test_approve.py  test_public_key.py  test_swap.py  test_swap_pancake.py  test_swap_token.py  test_swap_token_for_token.py  utils.py
tests-python/: conftest.py  requirements.txt  utils.py
tests/abis/: curve-pool.abi.json  vault-core.abi.json
tests/application_client/: client.py  command_builder.py
tests/boilerplate/: b2c.json
tests/elfs/: boilerplate_nanos.elf  boilerplate_nanox.elf  ethereum_nanos.elf  ethereum_nanosp.elf  ethereum_nanox.elf  plugin_nanos.elf  plugin_nanosp.elf  plugin_nanox.elf
tests/lib/: flipper_swap.test.js  generate_plugin_config.js  swap_exact_eth_for_tokens.test.js  test.fixture.js  vault_redeem_oeth.test.js  vault_redeem_ousd.test.js  zapper_deposit_eth.test.js
tests/networks/bsc/pstake/: b2c.json
tests/networks/ethereum/boilerplate/: b2c.json
tests/networks/ethereum/origin/: b2c.json
tests/networks/ethereum/origindefi/: b2c.json
tests/oeth/: test_oeth_curve_swap.py  test_oeth_vault.py  test_oeth_wrap.py  test_zapper.py
tests/ousd/: test_flipper.py  test_ousd_curve_swap.py  test_ousd_univ3.py  test_ousd_vault.py  test_ousd_wrap.py
tests/src/: claimAll.test.js  curve_pool_exchange.test.js  curve_pool_exchange_underlying.test.js  curve_router_exchange_multiple.test.js  flipper_swap.test.js  generate_plugin_config.js  stake.test.js  swap_exact_eth_for_tokens.test.js  test.fixture.js  uniswap_exchange.test.js  uniswap_exchange_single.test.js  unstake.test.js  unwrap_oeth.test.js  unwrap_ousd.test.js  vault_mint_oeth.test.js  vault_mint_ousd.test.js  vault_redeem_oeth.test.js  vault_redeem_ousd.test.js  wrap_oeth.test.js  wrap_ousd.test.js  zapper_deposit_eth.test.js  zapper_deposit_sfrxeth.test.js
